# mcp-workflow

./: README.md  pyproject.toml
api/: client.py  server.py
client/: main.py
mcp_math/: server.py
mcp_weather/: __main__.py  server.py
